Testing notebook formating

--- a/src/utils/neo4j_graph_generation.ipynb
+++ b/src/utils/neo4j_graph_generation.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <div style= \"font-family: Cambria; font-weight:bold; letter-spacing: 0px; color:white; font-size:180%; text-align:left;padding:3.0px; background: maroon; border-bottom: 8px solid black\" > TABLE OF CONTENTS<br><div>\n",
+    "<!-- #### <div style= \"font-family: Cambria; font-weight:bold; letter-spacing: 0px; color:white; font-size:180%; text-align:left;padding:3.0px; background: maroon; border-bottom: 8px solid black\" > TABLE OF CONTENTS<br><div> -->\n",
+    "\n",
+    "### TABLE OF CONTENTS\n",
     "* [IMPORTS](#1)\n",
     "* [INTRODUCTION](#2)\n",
     "* [Neomodel](#3)\n"
@@ -14,8 +16,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"1\"></a>\n",
-    "# <div style= \"font-family: Cambria; font-weight:bold; letter-spacing: 0px; color: white; font-size:120%; text-align:left;padding:3.0px; background: maroon; border-bottom: 8px solid black\" > Imports<br><div>"
+    "<!-- <a id=\"1\"></a>\n",
+    "# <div style= \"font-family: Cambria; font-weight:bold; letter-spacing: 0px; color: white; font-size:120%; text-align:left;padding:3.0px; background: maroon; border-bottom: 8px solid black\" > Imports<br><div> -->\n",
+    "\n",
+    "### Imports"
    ]
   },
   {
@@ -47,8 +51,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"2\"></a>\n",
-    "# <div style= \"font-family: Cambria; font-weight:bold; letter-spacing: 0px; color: white; font-size:120%; text-align:left;padding:3.0px; background: maroon; border-bottom: 8px solid black\" > Neomodel<br><div>\n",
+    "<!-- <a id=\"2\"></a>\n",
+    "# <div style= \"font-family: Cambria; font-weight:bold; letter-spacing: 0px; color: white; font-size:120%; text-align:left;padding:3.0px; background: maroon; border-bottom: 8px solid black\" > Neomodel<br><div> -->\n",
+    "\n",
+    "\n",
+    "### Neomodel\n",
     "\n",
     "\n",
     "In this section we will show how to use neomodel to connect and populate a Neo4J Graph Database. For further defails refer to the documentation: [neomodel](https://neo4j.com/developer-blog/py2neo-end-migration-guide/)"
